--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_drm1_drm2_cmt2_cmt3_HiC_HindIII_SRR12362059_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_drm1_drm2_cmt2_cmt3_HiC_HindIII_SRR12362059_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -262,31 +262,31 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[drm1_drm2_cmt2_cmt3_RNAseq_Rep2_SRR1005400_MappedOn_T2T_Col_both_sort_norm]
-file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/drm1_drm2_cmt2_cmt3_RNAseq_Rep2_SRR1005400_MappedOn_T2T_Col_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = ddcc RNA-seq Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #0000ff
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 2.0
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[drm1_drm2_cmt2_cmt3_RNAseq_Rep2_SRR1005400_MappedOn_T2T_Col_both_sort_norm]
+#file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/drm1_drm2_cmt2_cmt3_RNAseq_Rep2_SRR1005400_MappedOn_T2T_Col_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = ddcc RNA-seq Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #0000ff
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 2.0
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [Col_0_RNAseq_Rep1_SRR1005385_MappedOn_T2T_Col_both_sort_norm]
@@ -315,31 +315,31 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[Col_0_RNAseq_Rep2_SRR1005386_MappedOn_T2T_Col_both_sort_norm]
-file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/Col_0_RNAseq_Rep2_SRR1005386_MappedOn_T2T_Col_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT RNA-seq Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00e600
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 2.0
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[Col_0_RNAseq_Rep2_SRR1005386_MappedOn_T2T_Col_both_sort_norm]
+#file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/Col_0_RNAseq_Rep2_SRR1005386_MappedOn_T2T_Col_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT RNA-seq Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00e600
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 2.0
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [spacer]
@@ -381,40 +381,40 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[drm1_drm2_cmt2_cmt3_ATACseq_Rep2_SRR12362025_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/drm1_drm2_cmt2_cmt3_ATACseq_Rep2_SRR12362025_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = ddcc ATAC-seq Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #0000ff
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 0.80
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# for type, the options are: line, points, fill. Default is fill
-# to add the preferred line width or point size use:
-# type = line:lw where lw (linewidth) is float
-# similarly points:ms sets the point size (markersize (ms) to the given float
-# type = line:0.5
-# type = points:0.5
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[drm1_drm2_cmt2_cmt3_ATACseq_Rep2_SRR12362025_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/drm1_drm2_cmt2_cmt3_ATACseq_Rep2_SRR12362025_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = ddcc ATAC-seq Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #0000ff
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 0.80
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## for type, the options are: line, points, fill. Default is fill
+## to add the preferred line width or point size use:
+## type = line:lw where lw (linewidth) is float
+## similarly points:ms sets the point size (markersize (ms) to the given float
+## type = line:0.5
+## type = points:0.5
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [Col_0_ATACseq_Rep1_SRR12362020_MappedOn_T2T_Col_lowXM_both_sort_norm]
@@ -452,40 +452,40 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[Col_0_ATACseq_Rep2_SRR12362021_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep2_SRR12362021_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT ATAC-seq Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00e600
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 0.80
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# for type, the options are: line, points, fill. Default is fill
-# to add the preferred line width or point size use:
-# type = line:lw where lw (linewidth) is float
-# similarly points:ms sets the point size (markersize (ms) to the given float
-# type = line:0.5
-# type = points:0.5
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[Col_0_ATACseq_Rep2_SRR12362021_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep2_SRR12362021_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT ATAC-seq Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00e600
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 0.80
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## for type, the options are: line, points, fill. Default is fill
+## to add the preferred line width or point size use:
+## type = line:lw where lw (linewidth) is float
+## similarly points:ms sets the point size (markersize (ms) to the given float
+## type = line:0.5
+## type = points:0.5
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 #[Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm]
 #file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
@@ -798,34 +798,34 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[drm1_drm2_cmt2_cmt3_H3K9me2_Rep2_ChIP_SRR1999295_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/drm1_drm2_cmt2_cmt3_H3K9me2_Rep2_ChIP_SRR1999295_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = ddcc H3K9me2 Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #0000ff
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 15.0
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[drm1_drm2_cmt2_cmt3_H3K9me2_Rep2_ChIP_SRR1999295_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/drm1_drm2_cmt2_cmt3_H3K9me2_Rep2_ChIP_SRR1999295_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = ddcc H3K9me2 Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #0000ff
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 15.0
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 [Col_0_H3K9me2_Rep1_ChIP_SRR1005404_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/Col_0_H3K9me2_Rep1_ChIP_SRR1005404_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
@@ -856,34 +856,34 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[Col_0_H3K9me2_Rep2_ChIP_SRR1999292_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/Col_0_H3K9me2_Rep2_ChIP_SRR1999292_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT H3K9me2 Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00e600
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 15.0
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[Col_0_H3K9me2_Rep2_ChIP_SRR1999292_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/Col_0_H3K9me2_Rep2_ChIP_SRR1999292_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT H3K9me2 Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00e600
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 15.0
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [spacer]
