--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_kss_HiC_HindIII_SRR1504827_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_kss_HiC_HindIII_SRR1504827_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -261,31 +261,31 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[kss_RNAseq_Rep2_SRR1005402_MappedOn_T2T_Col_both_sort_norm]
-file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/kss_RNAseq_Rep2_SRR1005402_MappedOn_T2T_Col_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = kss RNA-seq Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #0099cc
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 2.0
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[kss_RNAseq_Rep2_SRR1005402_MappedOn_T2T_Col_both_sort_norm]
+#file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/kss_RNAseq_Rep2_SRR1005402_MappedOn_T2T_Col_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = kss RNA-seq Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #0099cc
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 2.0
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [Col_0_RNAseq_Rep1_SRR1005385_MappedOn_T2T_Col_both_sort_norm]
@@ -314,31 +314,31 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[Col_0_RNAseq_Rep2_SRR1005386_MappedOn_T2T_Col_both_sort_norm]
-file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/Col_0_RNAseq_Rep2_SRR1005386_MappedOn_T2T_Col_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT RNA-seq Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00e600
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 2.0
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[Col_0_RNAseq_Rep2_SRR1005386_MappedOn_T2T_Col_both_sort_norm]
+#file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/Col_0_RNAseq_Rep2_SRR1005386_MappedOn_T2T_Col_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT RNA-seq Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00e600
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 2.0
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [spacer]
@@ -581,34 +581,34 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[kss_H3K9me2_Rep2_ChIP_SRR1999298_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/kss_H3K9me2_Rep2_ChIP_SRR1999298_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = kss H3K9me2 Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #0099cc
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 15.0
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[kss_H3K9me2_Rep2_ChIP_SRR1999298_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/kss_H3K9me2_Rep2_ChIP_SRR1999298_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = kss H3K9me2 Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #0099cc
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 15.0
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 [Col_0_H3K9me2_Rep1_ChIP_SRR1005404_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/Col_0_H3K9me2_Rep1_ChIP_SRR1005404_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
@@ -639,34 +639,34 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[Col_0_H3K9me2_Rep2_ChIP_SRR1999292_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/Col_0_H3K9me2_Rep2_ChIP_SRR1999292_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT H3K9me2 Rep2
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00e600
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 15.0
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[Col_0_H3K9me2_Rep2_ChIP_SRR1999292_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/Col_0_H3K9me2_Rep2_ChIP_SRR1999292_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT H3K9me2 Rep2
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00e600
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 15.0
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [spacer]
