--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -149,7 +149,7 @@ height = 1
 # a region **with direction** is plotted.
 # If the bed file contains a column for color (column 9), then this color can be used by
 # setting:
-#color = bed_rgb
+color = bed_rgb
 # if color is a valid colormap name (like RbBlGn), then the score (column 5) is mapped
 # to the colormap.
 # In this case, the the min_value and max_value for the score can be provided, otherwise
@@ -158,7 +158,7 @@ height = 1
 #min_value=0
 #max_value=100
 # If the color is simply a color name, then this color is used and the score is not considered.
-color = #008ebe
+#color = #008ebe
 # whether printing the labels
 labels = false
 # optional:
@@ -225,7 +225,10 @@ file = /home/ajt200/analysis/nanopore/T2T_Col/annotation/nonCENAthila/nonCENAthi
 #title = Non-CEN ATHILA
 height = 1
 overlay_previous = yes
-color = #be3000
+# If the bed file contains a column for color (column 9), then this color can be used by
+# setting:
+color = bed_rgb
+#color = #be3000
 labels = false
 fontsize = 10
 border_color = None
